Create and SVG Logo

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <header></header>
+        <header>
+            <img src="miniblog-logo.svg" alt="The MiniBlog Logo"/>
+        </header>
         <main>
             <section id="writeBlog">
                 <h1>Add new entry</h1>
