Header Styling and HTML fixes
Minor fixes in index file and css header styling and font

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,9 +10,10 @@
     <body>
         <header class="navbar">
             <div class="navbar__brand">
-                <img src="miniblog-logo.svg" alt="The MiniBlog Logo"/>
+                <img class="navbar__logo" src="miniblog-logo.svg" alt="The MiniBlog Logo"/>Mini-Blog
             </div>
-            <ul class="navbar_navigation">
+
+            <ul class="navbar__navigation">
                 <li class="navbar__navigation-item">
                     <a href="#" class="navbar__link">Recent</a>
                 </li>
@@ -60,7 +61,7 @@
                     </div>
                     <div>
                         <a class="footer_item">About</a>
-                        <a class="footer_item">How MiniBlog was made</a>
+                        <a class="footer_item">How Mini-Blog was made</a>
                     </div>
                 </section>
             </div>
